Fixed logo stretch issue

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,7 +3,7 @@
 /*React-headroom*/
 .headroom-wrapper {
   max-height: 100px;
-  flex:1;
+ flex:1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,10 +26,12 @@
 
 .header {
   background-color: $lightBackground1;
-  max-width: 100%;
+    max-width: 100vw;
+ 
   padding: 15px 20px;
   margin: 0px auto;
   font-family: monospace;
+  
   
 }
 
@@ -170,12 +172,15 @@
 /* 48em = 768px */
 
 @media (min-width: 48em) {
+
+
   .header li {
     float: left;
   }
   .header {
     display: flex;
     align-items: center;
+    
     justify-content: space-between;
   }
   .header .menu {
